--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Dashboard#home</h1>
-<p>Find me in app/views/dashboard/home.html.erb</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">See Your daily Todo Update </h1>
+    <p class="lead">Please Sign Up Or Log In </p>
+    <p class="lead">
+        <%= link_to "SIGN UP",new_user_session_path,class: "btn btn-primary btn-lg"%>
+      </p>
+  </div>
+</div>
