--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
          <p class="notice"><%= notice %></p>
          <p class="alert"><%= alert %></p>
        <%end%>
-    <%= yield %>
+       <div class="container">
+          <%= yield %>
+       </div>
+
   </body>
 </html>
