--- a/app/views/admin/todos/_todo.html.erb
+++ b/app/views/admin/todos/_todo.html.erb
@@ -1,7 +1,9 @@
+
 <ul class="list-group">
     
   <li class="list-group-item">
-    <%= todo.name.capitalize%>
+    <%= todo.name.capitalize%>|
+    <%= todo.users_todo.user.name%>
     <!--<span class="pull-xs-right"><%= todo.status%></span>-->
     
   </li>
