--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -5,15 +5,25 @@
 
   <div class="col-md-2 col-md-offset-4">
     <%= link_to new_admin_todo_path(project: @project), remote: true do %>
-      <button class="btn btn-default">New</button>
+      <button class="btn btn-primary">Add Developer/Todo</button>
     <% end %>
-  </div>   
+  </div>
 </div>
 
 
 <div class="row">
   <div class="col-md-6 col-md-offset-2" id="show-form" style="display:none;"></div>
 </div>
+<div class="row">
+<ul class="list-group">
+<li class="list-group-item"><strong>Developers:</strong>
+<% @users.each do |user|%>
+  <%= user.name%>
+<%end%>
+</li>
+</ul>
+</div>
+<br/>
 <div class="row">
   <div class="col-md-7 col-md-offset-1" id="show"><%= render @todos %></div>
 </div>
