--- a/app/views/admin/todos/_form.html.erb
+++ b/app/views/admin/todos/_form.html.erb
@@ -14,11 +14,12 @@
  </div>   
 </div>
 <div class="col-md-3">
- <div class="form-group">
-  <label for="sel1">Developer</label>
-    <%= f.select :user_id, options_for_select(User.all),{},{class: "form-control"}%>
- </div>   
+  <div class="form-group">
+  <%= label_tag(:user_id, "Developer") %>
+  <%= select_tag(:user_id, options_for_select(@project.users.map{|u| [u.to_s, u.id] }),{class: "form-control"}) %>    
+  </div>    
 </div>
+
 <div class="col-md-3">
     <div class="form-group">
         <br/>
@@ -27,3 +28,20 @@
     
 </div>
 <%end%> 
+<br/>
+<%=form_tag(controller: "projects", action: "assign_project", method: "post", class: "nifty_form") do%>
+
+  <%= hidden_field_tag(:id, @project.id) %>
+  <div class="col-md-7">
+  <div class="form-group">
+  <%= label_tag(:user_id, "Developer") %>
+  <%= select_tag(:user_id, options_for_select(User.all.map{|u| [u.to_s, u.id] unless @project.users.include?(u)}),{class: "form-control"}) %>    
+  </div>    
+  </div>
+
+  <div class="col-md-5">
+  <br/>
+    <%= submit_tag "Add Developer", class: "btn btn-primary"%>
+  </div>
+  
+<%end%>
