--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -3,7 +3,7 @@
     <h1 class="display-3">See Your daily Todo Update </h1>
     <p class="lead">Please Sign Up Or Log In </p>
     <p class="lead">
-        <%= link_to "SIGN UP",new_user_session_path,class: "btn btn-primary btn-lg"%>
+        <%= link_to "SIGN IN",new_user_session_path,class: "btn btn-primary btn-lg"%>
       </p>
   </div>
 </div>
