--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,6 +5,12 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
         <!--<li><a><%= current_user.name%></a></li>-->
+        <% if current_user.admin %>
+       <li><%= link_to "Projects",admin_projects_path%></li>
+       <li><%= link_to "Charts",admin_charts_path%></li>
+        <%else%>
+        <li><%= link_to "TODOS",user_path(current_user)%></li>
+        <%end%>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name%> <span class="caret"></span></a>
           <ul class="dropdown-menu">
