--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -1,9 +1,5 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3">See Your daily Todo Update </h1>
-    <p class="lead">Please Sign Up Or Log In </p>
-    <p class="lead">
-        <%= link_to "SIGN IN",new_user_session_path,class: "btn btn-primary btn-lg"%>
-      </p>
-  </div>
-</div>
+    <div class="jumbotron">
+        <h1>Todo List!</h1>
+        <p>Please Login To check your Task	</p>
+        <p><%= link_to "Continue", new_user_registration_path,class: "btn btn-primary btn-sm" %></p>
+    </div>
