--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -1,5 +1,8 @@
-<%=form_for [:admin ,@project],remote: true do |f| %>
+<%=form_for [:admin ,@project],class: "form-inline",remote: true do |f| %>
+<div class="form-group">
     <%=f.label :name%>
     <%= f.text_field :name%>
-    <%= f.submit "Create",:class => "btn btn-primary"%>
+
+    <%= f.submit "Create",:class => "btn btn-success"%>
+</div>
 <%end%>
