--- a/app/views/admin/projects/_project.html.erb
+++ b/app/views/admin/projects/_project.html.erb
@@ -1,6 +1,6 @@
 <div class="list-group">
   <%= link_to project.name ,admin_project_path(project), class: "list-group-item list-group-item-action list-group-item-success"%>
   <%= link_to [:admin,project], remote: true, method: :delete,  data: { confirm: 'Are you sure?' } do %>
-  <button class="btn btn-primary">Delete!</button> 
+  <button class="btn btn-danger">Delete!</button> 
   <% end %>
 </div>
