--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,28 +1,31 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-        <!--<li><a><%= current_user.name%></a></li>-->
-        <% if current_user.admin %>
-       <li><%= link_to "Projects",admin_projects_path%></li>
-       <li><%= link_to "Charts",admin_charts_path%></li>
-        <%else%>
-        <li><%= link_to "TODOS",user_path(current_user)%></li>
-        <%end%>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name%> <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-              <li><%= link_to 'Profile', edit_user_registration_path %></li>
-              <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+
+    <nav class="navbar-default navbar-inverse" role="navigation"">
+      <div class="container-fluid">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+            <!--<li><a><%= current_user.name%></a></li>-->
+            <% if current_user.admin %>
+             <li><%= link_to "Status",admin_path%></li>
+              <li><%= link_to "Projects",admin_projects_path%></li>
+              <li><%= link_to "Charts",admin_charts_path%></li>
+            <%else%>
+              <li><%= link_to "TODOS",user_path(current_user)%></li>
+            <%end%>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name.capitalize%> <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <li><%= link_to 'Profile', edit_user_registration_path %></li>
+                  <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+              </ul>
+            </li>
+            <%else%>
+                <li><%= link_to 'Log In', new_user_session_path %></li>
+                <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+            <%end%>
           </ul>
-        </li>
-        <%else%>
-            <li><%= link_to 'Log In', new_user_session_path %></li>
-            <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-        <%end%>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-  </nav>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+<br/>
